--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,14 @@
         </div>
         <div class="container">
             <div class="slidecontainer">
-                <div class="value">0</div>
-                <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-                <div id="progressBar"></div>
+                <div class="main">
+                    <input type="range" min="0" max="100" value="50" id="slider">
+                    <div id="selector">
+                      <div class="selectBtn"></div>
+                      <div id="selectValue"></div>
+                    </div>
+                    <div id="progressBar"></div>
+                  </div>
                 <div class="block">
                     <div class="block__text">
                         <p>10</p>
